--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-MONGODB_URL=mongodb://localhost:27017/
+MONGODB_URL=mongodb://mongo:27017/
 MONGODB_DATABASE_NAME=user
 MONGODB_DATABASE_COLLECTION=users
 MONGODB_USERNAME: root
 MONGODB_PASSWORD: password
+GIN_MODE=debug
+GIN_PORT=:8080
